Fix Editor content images overflow

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1158,6 +1158,10 @@ progress {
   font-size: 1rem;
 }
 
+.ed-content img {
+  max-width: 100%;
+}
+
 input.checkbox {
   display: none;
 }
