--- a/resources/scss/components/editor_content.scss
+++ b/resources/scss/components/editor_content.scss
@@ -35,4 +35,8 @@
     h6 {
         @include font-size(1rem);
     }
+
+    img {
+        max-width: 100%;
+    }
 }
